tests/core/error/values-1.rq
SELECT ?a ?b { VALUES (?a ?b) { (1) } }
